force-app/main/default/objects/geopointe__GP_List_Assignment__c/geopointe__GP_List_Assignment__c.object-meta.xml
<CustomObject>
    <description>Value in a working list.</description>
    <label>Geopointe List Assignment</label>
    <nameField>
        <label>Geopointe List Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe List Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>