force-app/main/default/objects/geopointe__GP_List_Assignment__c/fields/geopointe__Geocode_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geocode_ID__c</fullName>
    <description>Geocode Id of the list assignment.</description>
    <inlineHelpText>Geocode Id of the list assignment.</inlineHelpText>
    <label>Geocode ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>