force-app/main/default/objects/geopointe__GP_List_Assignment__c/fields/geopointe__GP_List__c.field-meta.xml
<CustomField>
    <fullName>geopointe__GP_List__c</fullName>
    <description>Geopointe list that the list assignment belongs to.</description>
    <inlineHelpText>Geopointe list that the list assignment belongs to.</inlineHelpText>
    <label>Geopointe List</label>
    <referenceTo>geopointe__GP_List__c</referenceTo>
    <relationshipLabel>Geopointe List Assignment</relationshipLabel>
    <relationshipName>Geopointe_List_Assignment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>