force-app/main/default/objects/geopointe__GP_List_Assignment__c/fields/geopointe__Order__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Order__c</fullName>
    <inlineHelpText>Contains the order in which list assignments are shown in a list.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>