force-app/main/default/objects/geopointe__GP_List_Assignment__c/fields/geopointe__Place_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Place_ID__c</fullName>
    <description>ID of the place that the list assignment belongs to.</description>
    <inlineHelpText>ID of the place that the list assignment belongs to.</inlineHelpText>
    <label>Place ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>